backend/k8s/aws-logging.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: #{PROJECT_NAME}#-observability
  labels:
    aws-observability: enabled
