backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: #{PROJECT_NAME}#-backend
  namespace: #{K8S_NAMESPACE}#
  labels:
    app: #{PROJECT_NAME}#-backend
spec:
  selector:
    app: #{PROJECT_NAME}#-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
